<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map_fragment"
        class="com.here.android.mpa.mapping.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.v7.widget.CardView
            android:id="@+id/start_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/search_field_transition"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="15dp"
            tools:targetApi="lollipop">

            <TextView
                android:id="@+id/start_point_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:hint="@string/start_point"
                android:inputType="none"
                android:textColorHint="@color/text_hint" />

            <ImageView
                android:id="@+id/start_point_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_close"
                android:visibility="gone" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/end_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/search_field_transition"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="15dp"
            tools:targetApi="lollipop">

            <TextView
                android:id="@+id/end_point_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/end_point"
                android:inputType="none"
                android:textColorHint="@color/text_hint" />

            <ImageView
                android:id="@+id/end_point_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_close"
                android:visibility="gone" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
